[FEAT] Adding icon, gifs and fix resolution on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body{
 .home::before{
     content: '';
     background-image:  url('../images/bg.png');
+    background-attachment: fixed;
     background-position: center;
     background-size: cover;
     background-position-x: initial;
@@ -240,6 +241,7 @@ body{
                                             /* about row */
 .photo{
     overflow: hidden;
+    align-items: center;
     box-shadow: rgb(255, 255, 255) 0px -2px 8px 0px ,rgba(99, 99, 99, 0.5) 0px 0px 8px -4px !important;
     border-top-left-radius: 10px !important;
     border-top-right-radius: 0 !important;
